<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="396dp"
        android:layout_height="718dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView76"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView77"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="" />

            <TextView
                android:id="@+id/textView78"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:text="@string/settings" />

            <TextView
                android:id="@+id/textView79"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView80"
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/textView81"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/device_name" />

        <TextView
            android:id="@+id/textView82"
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/textView83"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/transfer_method" />

        <TextView
            android:id="@+id/textView84"
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/textView85"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/save_location" />

        <TextView
            android:id="@+id/textView86"
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/textView87"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/auto_accept_trusted_devices" />

        <TextView
            android:id="@+id/textView88"
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/textView89"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/dark_mode" />

        <TextView
            android:id="@+id/textView90"
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/textView91"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/about_app" />

        <TextView
            android:id="@+id/textView93"
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/textView94"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/app_version" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>