<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TransferActivity">

    <LinearLayout
        android:layout_width="392dp"
        android:layout_height="695dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView42"
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/textView43"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/sending_information" />

        <TextView
            android:id="@+id/textView44"
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/textView45"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/file_name" />

        <TextView
            android:id="@+id/textView46"
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/textView47"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/progress" />

        <TextView
            android:id="@+id/textView48"
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/textView49"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/speed" />

        <TextView
            android:id="@+id/textView62"
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/textView63"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/time_left" />

        <TextView
            android:id="@+id/textView64"
            android:layout_width="match_parent"
            android:layout_height="150dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView66"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/cancel" />

            <TextView
                android:id="@+id/textView67"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>