<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TransferCompleteActivity">

    <LinearLayout
        android:layout_width="403dp"
        android:layout_height="720dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView112"
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/textView113"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/files_received" />

        <TextView
            android:id="@+id/textView117"
            android:layout_width="match_parent"
            android:layout_height="168dp" />

        <TextView
            android:id="@+id/textView118"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/storage_location" />

        <TextView
            android:id="@+id/textView119"
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/textView120"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/transfer_status" />

        <TextView
            android:id="@+id/textView121"
            android:layout_width="match_parent"
            android:layout_height="76dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="105dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView122"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/open_folder"
                style="@style/Widget.Material3.Button.OutlinedButton"/>

            <TextView
                android:id="@+id/textView123"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/done"
                style="@style/Widget.Material3.Button.OutlinedButton"/>

            <TextView
                android:id="@+id/textView124"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>