<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReceiverActivity">

    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="728dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView103"
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/textView106"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/incoming_connection" />

        <TextView
            android:id="@+id/textView107"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:text="" />

        <TextView
            android:id="@+id/textView108"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/sender_device_name" />

        <TextView
            android:id="@+id/textView109"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="" />

        <TextView
            android:id="@+id/textView110"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/status" />

        <TextView
            android:id="@+id/textView111"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:text="" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView114"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/accept_connection"
                style="@style/Widget.Material3.Button.OutlinedButton"/>

            <TextView
                android:id="@+id/textView115"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/decline_connection"
                style="@style/Widget.Material3.Button.OutlinedButton"/>

            <TextView
                android:id="@+id/textView116"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>