<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EstablishingConnectionActivity">

    <LinearLayout
        android:layout_width="396dp"
        android:layout_height="728dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView125"
            android:layout_width="match_parent"
            android:layout_height="133dp"
            android:text="" />

        <TextView
            android:id="@+id/textView126"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/waiting_for_sender" />

        <TextView
            android:id="@+id/textView127"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:text="" />

        <TextView
            android:id="@+id/textView128"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/device_name" />

        <TextView
            android:id="@+id/textView129"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="" />

        <TextView
            android:id="@+id/textView130"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/status" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>